How to join Kaggle competitions for learning and fun

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
 long_nguyen:
   name: Long H. Nguyen
   web: longnguyen.info
-  email: nguyenhailong@yahoo.com
-  bio: "Data scientist & Software engineer."
+  email: nguyenhailong.phd@gmail.com
+  bio: "Knowledge worths sharing!"
   avatar: bio-photo.jpg
 
