--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ kramdown:
 owner:
   name: Long H. Nguyen
   avatar: bio-photo.jpg
-  bio: "Data scientist & Software engineer"
+  bio: "Knowledge worths sharing!"
+  slogan: 
   email:
   disqus-shortname:
   twitter: #username
@@ -40,7 +41,7 @@ owner:
     ad-client:
     ad-slot:
   bing-verify:
-  github: #username
+  github: nguyenhailong
   stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
   linkedin: nguyenhailongphd
 
