Update post Kaggle competitions

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name: Long H. Nguyen
   avatar: bio-photo.jpg
-  bio: "Knowledge worths sharing!"
+  bio: "Knowledge is worth sharing!"
   slogan: 
   email:
   disqus-shortname:
